--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.7.0
+  freezed: ^3.2.0
+  json_serializable: ^6.10.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - lib/core/themes/theme.json
