--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   provider: ^6.1.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
